--- a/front-end/app/src/main/res/values/strings.xml
+++ b/front-end/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MissionMemorizeApp</string>
+    <string name="app_name">Mission Memorize</string>
 </resources>
