--- a/front-end/app/src/main/res/values/strings.xml
+++ b/front-end/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="user_name">User Name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    
+    <string name="reference">Reference</string>
+    <string name="body">Body</string>
+    <string name="reveal">Reveal</string>
+    <string name="difficulty">Difficulty:</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
+    <string name="correct">Correct</string>
+    <string name="incorrect">Incorrect</string>
 </resources>
