--- a/front-end/app/src/main/res/values/strings.xml
+++ b/front-end/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="user_name">User Name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="projects">Projects</string>
+    <string name="add_new_project">+ Project</string>
+    <string name="folders">Folders</string>
+    <string name="add_new_folder">+ Folder</string>
 </resources>
